unpackaged/main/default/objects/Changes_to_Income__c/fields/Income_Change__c.field-meta.xml
<CustomField>
    <fullName>Income_Change__c</fullName>
    <inlineHelpText>Can be negative</inlineHelpText>
    <label>Income Change</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>