unpackaged/main/default/objects/Changes_to_Income__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The person the change related to</inlineHelpText>
    <label>Owner</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Changes_to_Income</relationshipName>
    <type>Lookup</type>
</CustomField>