unpackaged/main/default/objects/Changes_to_Income__c/fields/Related_Asset__c.field-meta.xml
<CustomField>
    <fullName>Related_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipName>Changes_to_Income</relationshipName>
    <type>Lookup</type>
</CustomField>