unpackaged/main/default/objects/Changes_to_Income__c/fields/Related_Employment__c.field-meta.xml
<CustomField>
    <fullName>Related_Employment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The affected employment</inlineHelpText>
    <label>Related Employment</label>
    <referenceTo>FinServ__Employment__c</referenceTo>
    <relationshipName>Changes_to_Income</relationshipName>
    <type>Lookup</type>
</CustomField>