unpackaged/main/default/objects/Changes_to_Income__c/fields/Related_Financial_Product__c.field-meta.xml
<CustomField>
    <fullName>Related_Financial_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Financial Product</label>
    <referenceTo>FinServ__FinancialAccount__c</referenceTo>
    <relationshipName>Changes_to_Income</relationshipName>
    <type>Lookup</type>
</CustomField>